[package]
name = "tracing-google-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-opentelemetry = { version = "0.32.1", optional = true }
opentelemetry = { version = "0.31.0", optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
base64 = "0.22.1"

[features]
default = []
opentelemetry = ["dep:tracing-opentelemetry", "dep:opentelemetry"]
